- Supports HTML5's datalist tag elements
- Set validation rules.
- Showing as the alert box when any errors occurred ??
- Popup menu's default value; if there isn't the value of them, set first one.
- DIV._im_multivalue: Set muliti-line values to one field within the div element.
- [BUG] Radio buttons shows the message of another was updated in spite of it's not true.

Toward Ver.1.2
- Objective handling for the data in database.
- Server side processing with Ruby on Rails.
- Single query can retrieve main and related tables simultaneously.
- Caching the result of queries.
- Aspect programming into some call-back function and Data Access class.
- FileMaker's Find style database search.
- Transaction Support (updating=transaction)
- Store NULL for empty string.
- Multiple values within one field. (It may be required for FileMaker especially.)

Toward Ver.1.3
- HTML5's local database supporting.
- Amazon Web Service supporting.

Mostly Slogan at anytime: or Should be done:
- Fulfilling documentation, including tutorials.
- Translating to English from Japanese Documents.

=================================
Known Issues for Browsers:
=================================
Internet Explorer 7
- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Ver.1.0.6 === will be next release.
- Authentication screen was redesigned with transparent backgrounds.
- The password of the user are stored with randam generated salts.
- FX.php 6.0 included.
- The statement "$prohibitDebugMode = true;" in params.php. It can prohibit debug mode on the server side.

Ver.1.0.5 (2012/2/5)
- Authentication support first appearance!