@@ -26,6 +26,16 @@ class DB_PDO_Test extends PHPUnit_Framework_TestCase
 
     public function testAuthUser()
     {
+        $expiredDT = new DateTime('2012-02-13 11:32:40');
+        $currentDate = new DateTime('2012-02-14 11:32:51');
+    //    $expiredDT = new DateTime('2012-02-13 00:00:00');
+    //    $currentDate = new DateTime('2013-04-13 01:02:03');
+        $intervalDT = $expiredDT->diff($currentDate, true);
+        var_export($intervalDT);
+        $calc = (( $intervalDT->days * 24 + $intervalDT->h ) * 60 + $intervalDT->i ) * 60 + $intervalDT->s;
+        echo $calc;
+        $this->assertTrue ( $calc === (11+3600*24) );
+
         $username = 'user1';
         $expectedPasswd = 'd83eefa0a9bd7190c94e7911688503737a99db0154455354';
 
